CHANGE: replacing old Version behavior with new Version-record CHANGE: minor cleanup and refactoring